2002-09-04  Keith Seitz  <keiths@redhat.com>

	* thread.c (do_captured_list_thread_ids): Call prune_threads
	and target_find_new_threads.

2002-08-29  Keith Seitz  <keiths@redhat.com>

	* gdb-events.sh (context_changed): Rename to selected_thread_changed
	to parallel selected_frame_level_changed.
	* thread.c (do_captured_thread_select): Ditto.
	* gdb-events.c: Regenerate.
	* gdb-events.h: Regenerate.

2002-08-28  Keith Seitz  <keiths@redhat.com>

	* interps.c (interpreter_exec_cmd): Temporarily set
	current interpreter to quiet, too, so that we don't get
	too many prompts when switching interpreters.

2002-08-28  Keith Seitz  <keiths@redhat.com>

	* thread.c (do_captured_thread_select): Add context-changed
	notification.
	* infrun.c (handle_inferior_event): Remove context-changed
	notification. The stop result already has this information.

	* thread.c (do_captured_list_thread_ids): Use ui_out_list_begin/end
	instead of ui_out_tuple_begin/end.

2002-08-22  Keith Seitz  <keiths@redhat.com>

	* breakpoint.c (internal_breakpoint_number): Revert 2002-06-18 change.
	(create_internal_breakpoint): Likewise.
	(watch_command_1): Use create_internal_breakpoint to create
	the watchpoint scope breakpoint.

2002-08-21  Keith Seitz  <keiths@redhat.com>

	* gdb-events.sh: Replace register_update with target-changed event.
	* gdb-events.c: Regenerated.
	* gdb-events.c: Regenerated.
	* valops.c (value_assign): Use target_changed_event instead
	of register_update_event and memory_changed.

2002-08-19  Keith Seitz  <keiths@redhat.com>

	* stack.c (select_frame_command): Send selected-frame-level-changed
	event notification, but only if the level actually changed.
	(up_silently_base): Add selected-frame-level-changed event
	notification.
	(down_silently_base): Likewise.
	(frame_command): Revert 2002-07-25 changes.
	(up_command): Likewise.
	(down_command): Likewise.

2002-08-13  Keith Seitz  <keiths@redhat.com>

	* interps.c (_initialize_interpreter): Remove ability to set