@@ -49,7 +49,4 @@ extern enum gdb_rc gdb_value_struct_elt (struct ui_out *uiout, struct value **re
 extern int gdb_value_ind (struct value *val, struct value ** rval);
 
 extern int gdb_parse_and_eval_type (char *, int, struct type **);
-
-extern enum gdb_rc gdb_execute_command (struct ui_out *uiout, char *command,
-					int from_tty);
 #endif /* WRAPPER_H */
